# radarust

./: Cargo.toml  README.md  config.yaml
local_storage/: .managed.json  meta.json
src/: azure.rs  config.rs  main.rs  search.rs
